# io-jmap

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  flake.nix  shell.nix
.github/workflows/: tests.yml
docs/: README.md
examples/: push_subscription.rs  session.rs
src/: client.rs  context.rs  coroutine.rs  lib.rs  rfc8620.rs  rfc8621.rs  rfc9610.rs
src/coroutines/: blob_download.rs  blob_upload.rs  email_copy.rs  email_get.rs  email_import.rs  email_parse.rs  email_query.rs  email_set.rs  email_submission_cancel.rs  email_submission_get.rs  email_submission_query.rs  email_submission_set.rs  get_session.rs  identity_get.rs  identity_set.rs  mailbox_changes.rs  mailbox_get.rs  mailbox_query.rs  mailbox_set.rs  mod.rs  send.rs  thread_get.rs  vacation_response_get.rs  vacation_response_set.rs
src/rfc8620/: blob-download.rs  blob-upload.rs  blob_download.rs  blob_upload.rs  changes.rs  coroutine.rs  error.rs  event_source.rs  filter.rs  get.rs  mod.rs  push_subscription.rs  query-changes.rs  query.rs  query_changes.rs  redirect.rs  request.rs  send.rs  session-get.rs  session.rs  session_get.rs  set.rs  types.rs  utils.rs
src/rfc8620/coroutines/: blob-download.rs  blob-upload.rs  changes.rs  get.rs  mod.rs  query-changes.rs  query.rs  send.rs  session-get.rs  set.rs
src/rfc8620/event_source/: mod.rs  subscribe.rs  types.rs  utils.rs
src/rfc8620/push_subscription/: get.rs  mod.rs  set.rs  types.rs
src/rfc8620/types/: error.rs  mod.rs  result_reference.rs  session.rs
src/rfc8621/: capabilities.rs  email-changes.rs  email-copy.rs  email-get.rs  email-import.rs  email-parse.rs  email-query.rs  email-set.rs  email-submission-cancel.rs  email-submission-get.rs  email-submission-query.rs  email-submission-set.rs  email.rs  email_submission.rs  identity-get.rs  identity-set.rs  identity.rs  mailbox-changes.rs  mailbox-get.rs  mailbox-query.rs  mailbox-set.rs  mailbox.rs  mod.rs  thread-changes.rs  thread-get.rs  thread.rs  utils.rs  vacation-response-get.rs  vacation-response-set.rs  vacation_response.rs
src/rfc8621/coroutines/: email-changes.rs  email-copy.rs  email-get.rs  email-import.rs  email-parse.rs  email-query.rs  email-set.rs  email-submission-cancel.rs  email-submission-get.rs  email-submission-query.rs  email-submission-set.rs  identity-get.rs  identity-set.rs  mailbox-changes.rs  mailbox-get.rs  mailbox-query.rs  mailbox-set.rs  mod.rs  thread-changes.rs  thread-get.rs  vacation-response-get.rs  vacation-response-set.rs
src/rfc8621/email/: changes.rs  copy.rs  get.rs  import.rs  mod.rs  parse.rs  query.rs  set.rs  types.rs  utils.rs
src/rfc8621/email_submission/: cancel.rs  get.rs  mod.rs  query.rs  set.rs  types.rs  utils.rs
src/rfc8621/identity/: get.rs  mod.rs  set.rs  types.rs
src/rfc8621/mailbox/: changes.rs  get.rs  mod.rs  query.rs  set.rs  types.rs
src/rfc8621/thread/: changes.rs  get.rs  mod.rs  types.rs
src/rfc8621/types/: email.rs  email_submission.rs  identity.rs  mailbox.rs  mod.rs  thread.rs
src/rfc8621/vacation_response/: get.rs  mod.rs  set.rs  types.rs  utils.rs
src/rfc9610/: address_book.rs  contact_card.rs  mod.rs  utils.rs
src/rfc9610/address_book/: changes.rs  get.rs  mod.rs  set.rs  types.rs
src/rfc9610/contact_card/: changes.rs  copy.rs  get.rs  mod.rs  query.rs  set.rs  types.rs
src/types/: email.rs  email_submission.rs  error.rs  identity.rs  mailbox.rs  mod.rs  session.rs  vacation_response.rs
tests/: common.rs  fastmail.rs  rfc8620.rs  rfc8621.rs  stalwart.rs  stalwart.sh  stub.rs
