[package]
name = "io-jmap"
description = "I/O-free JMAP client library"
version = "0.0.1"
authors = ["Clément DOUIN <pimalaya.org@posteo.net>"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "email"]
keywords = ["io-free", "coroutine", "jmap", "rfc8620", "rfc8621"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-jmap/latest/io_jmap"
repository = "https://github.com/pimalaya/io-jmap"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
env_logger = "0.11"
io-socket = { version = "0.0.1", default-features = false, features = ["std-stream"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-platform-verifier = "0.6"
secrecy = { version = "0.10", default-features = false }

[dependencies]
io-http = { version = "0.0.3", default-features = false }
io-socket = { version = "0.0.1", default-features = false }
log = { version = "0.4", default-features = false }
secrecy = { version = "0.10", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
thiserror = { version = "2", default-features = false }
url = { version = "2.5", default-features = false, features = ["serde"] }

[patch.crates-io]
io-http.git = "https://github.com/pimalaya/io-http"
io-socket.git = "https://github.com/pimalaya/io-socket"
