[package]
name = "io-jmap"
description = "JMAP client library"
version = "0.0.1"
authors = ["soywod <pimalaya.org@posteo.net>"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "email"]
keywords = ["io-free", "coroutine", "jmap", "rfc8620", "rfc8621"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-jmap/latest/io_jmap"
repository = "https://github.com/pimalaya/io-jmap"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["client"]
client = []
rustls-ring = ["client", "pimalaya-stream/rustls-ring", "dep:anyhow", "dep:pimalaya-stream"]
rustls-aws = ["client", "pimalaya-stream/rustls-aws", "dep:anyhow", "dep:pimalaya-stream"]
native-tls = ["client", "pimalaya-stream/native-tls", "dep:anyhow", "dep:pimalaya-stream"]
vendored = ["pimalaya-stream?/vendored"]

[dev-dependencies]
env_logger = "0.11"
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-platform-verifier = "0.7"
secrecy = { version = "0.10", default-features = false }
serde_json = "1"
url = { version = "2.5", default-features = false }

[dependencies]
anyhow = { version = "1", optional = true }
io-http = { version = "0.0.3", default-features = false }
log = { version = "0.4", default-features = false }
pimalaya-stream = { version = "0.0.1", default-features = false, optional = true }
secrecy = { version = "0.10", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
thiserror = { version = "2", default-features = false }
url = { version = "2.5", default-features = false, features = ["serde"] }

# [patch.crates-io]
# io-http.path = "../io-http"
# pimalaya-stream.path = "../stream"

[patch.crates-io]
io-http.git = "https://github.com/pimalaya/io-http"
pimalaya-stream.git = "https://github.com/pimalaya/stream"
